@@ -1,3 +1,6 @@
+3.sep (lv)
+      - partial fix #12276: MusicXML import: sub-optimal handling of different duration measures
+        import is OK, but on export some spurious backups and forwards are generated
 31.aug (lv)
       - added function to determine measure length, in preparation for fixing #12276
 30.aug (lv)
